pulsante elimina nel metodo get in backoffice.js

--- a/backoffice.html
+++ b/backoffice.html
@@ -101,6 +101,7 @@
             <button type="submit" class="btn btn-primary me-2" id="submit-btn">Aggiungi</button>
             <button type="reset" class="btn btn-secondary" id="reset-button">Reset</button>
           </div>
+          <div id="btns"></div>
         </form>
       </div>
     </div>
