--- a/detail.html
+++ b/detail.html
@@ -42,7 +42,15 @@
         </div>
       </div>
     </nav>
-    <div class="container mt-5" id="product-detail"></div>
+
+    <div class="container mt-5">
+      <div class="custom-header">
+        <h1 class="mb-2 font-custom">Dettagli del prodotto</h1>
+        <p class="mb-5">Scopri tutti i dettagli del prodotto selezionato</p>
+      </div>
+
+      <div class="container mt-5" id="product-detail"></div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
