--- a/home.html
+++ b/home.html
@@ -33,10 +33,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active text-white fw-bold" href="#">Home</a>
+              <a class="nav-link active text-white fw-bold" href="./home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-white" href="#">Back Office</a>
+              <a class="nav-link active text-white" href="./backoffice.html">Back Office</a>
             </li>
           </ul>
         </div>
