Aggiunta indicatore di caricamento

--- a/home.html
+++ b/home.html
@@ -44,9 +44,9 @@
     </nav>
 
     <div class="container mt-5">
-      <div class="custom-header">
+      <div class="custom-header d-flex align-items-center">
         <h1 class="mb-2 font-custom">Prodotti Disponibili</h1>
-        <p class="mb-5">Scopri tutti i prodotti del nostro catalogo</p>
+        <span id="loading-indicator" class="spinner-border spinner-border-lg text-primary ms-2" style="display: none"></span>
       </div>
 
       <div id="products-list" class="row"></div>
