aggiunta sezione modifica prodotti esistenti nel back office

--- a/backoffice.html
+++ b/backoffice.html
@@ -45,7 +45,7 @@
 
     <div class="container mt-5">
       <div class="custom-header">
-        <h1 class="mb-2 font-custom">Inserimento Prodotti</h1>
+        <h1 class="mb-2 font-custom">Inserisci un nuovo prodotto</h1>
         <p class="mb-5">Gestisci facilmente i prodotti del tuo catalogo</p>
       </div>
 
@@ -104,6 +104,13 @@
           <div id="btns"></div>
         </form>
       </div>
+
+      <div class="custom-header mt-5">
+        <h1 class="mb-2 font-custom">Modifica prodotti esistenti</h1>
+        <p class="mb-5">Gestisci i prodotti già inseriti nel tuo catalogo</p>
+      </div>
+
+      <div id="products-list" class="row"></div>
     </div>
 
     <script
