Modifica sezione modifica prodotti back office

--- a/backoffice.html
+++ b/backoffice.html
@@ -45,8 +45,8 @@
 
     <div class="container mt-5">
       <div class="custom-header">
-        <h1 class="mb-2 font-custom">Inserisci un nuovo prodotto</h1>
-        <p class="mb-5">Gestisci facilmente i prodotti del tuo catalogo</p>
+        <h1 id="page-title" class="mb-2 font-custom">Inserisci un nuovo prodotto</h1>
+        <p id="page-subtitle" class="mb-5">Gestisci facilmente i prodotti del tuo catalogo</p>
       </div>
 
       <div class="custom-card mt-4">
