--- a/home.html
+++ b/home.html
@@ -42,10 +42,15 @@
         </div>
       </div>
     </nav>
-
+    <section class="hero-image d-flex justify-content-center align-items-center text-center text-white">
+      <div class="container">
+        <h1>Benvenuto nel nostro E-commerce di Telefoni</h1>
+        <p>Scopri i migliori telefoni e le offerte più vantaggiose!</p>
+      </div>
+    </section>
     <div class="container mt-5">
       <div class="custom-header d-flex align-items-center">
-        <h1 class="mb-2 font-custom">Prodotti Disponibili</h1>
+        <h1 class="mb-4 font-custom">Prodotti Disponibili</h1>
         <span id="loading-indicator" class="spinner-border spinner-border-lg text-primary ms-2" style="display: none"></span>
       </div>
 
