--- a/backoffice.html
+++ b/backoffice.html
@@ -10,6 +10,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
+
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -110,7 +112,7 @@
         <p class="mb-5">Gestisci i prodotti già inseriti nel tuo catalogo</p>
       </div>
 
-      <div id="products-list" class="row"></div>
+      <div id="products-list" class="row g-4"></div>
     </div>
 
     <script
