--- a/detail.html
+++ b/detail.html
@@ -10,6 +10,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
+
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -33,10 +35,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active text-white fw-bold" href="#">Home</a>
+              <a class="nav-link active text-white fw-bold" href="./home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-white" href="#">Back Office</a>
+              <a class="nav-link active text-white" href="./backoffice.html">Back Office</a>
             </li>
           </ul>
         </div>
