--- a/home.html
+++ b/home.html
@@ -10,6 +10,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
+
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -44,8 +46,8 @@
     </nav>
     <section class="hero-image d-flex justify-content-center align-items-center text-center text-white">
       <div class="container">
-        <h1>Benvenuto nel nostro E-commerce di Telefoni</h1>
-        <p>Scopri i migliori telefoni e le offerte più vantaggiose!</p>
+        <h1 class="text-dark shadow-text">Benvenuto nel nostro shop!</h1>
+        <p class="text-dark shadow-text tex">Scopri i migliori telefoni!</p>
       </div>
     </section>
     <div class="container mt-5">
@@ -54,7 +56,7 @@
         <span id="loading-indicator" class="spinner-border spinner-border-lg text-primary ms-2" style="display: none"></span>
       </div>
 
-      <div id="products-list" class="row"></div>
+      <div id="products-list" class="row g-4"></div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
