--- a/backoffice.html
+++ b/backoffice.html
@@ -114,6 +114,11 @@
 
       <div id="products-list" class="row g-4"></div>
     </div>
+    <footer class="bg-dark text-light py-3">
+      <div class="container text-center">
+        <p class="mb-1">© 2025 TeleShop - Tutti i diritti riservati</p>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
