--- a/detail.html
+++ b/detail.html
@@ -53,6 +53,11 @@
 
       <div class="container mt-5" id="product-detail"></div>
     </div>
+    <footer class="bg-dark text-light py-3">
+      <div class="container text-center">
+        <p class="mb-1">© 2025 TeleShop - Tutti i diritti riservati</p>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
