--- a/home.html
+++ b/home.html
@@ -44,19 +44,31 @@
         </div>
       </div>
     </nav>
-    <section class="hero-image d-flex justify-content-center align-items-center text-center text-white">
-      <div class="container">
-        <h1 class="text-dark shadow-text">Benvenuto nel nostro shop!</h1>
-        <p class="text-dark shadow-text tex">Scopri i migliori telefoni!</p>
-      </div>
-    </section>
-    <div class="container mt-5">
-      <div class="custom-header d-flex align-items-center">
-        <h1 class="mb-4 font-custom">Prodotti Disponibili</h1>
-        <span id="loading-indicator" class="spinner-border spinner-border-lg text-primary ms-2" style="display: none"></span>
-      </div>
+    <main>
+      <section class="hero-image d-flex justify-content-center align-items-center text-center text-white">
+        <div class="container">
+          <h1 class="text-dark shadow-text">Benvenuto nel nostro shop!</h1>
+          <p class="text-dark shadow-text tex">Scopri i migliori telefoni!</p>
+        </div>
+      </section>
+      <div class="container mt-5">
+        <div class="custom-header d-flex align-items-center">
+          <h1 class="mb-4 font-custom">Prodotti Disponibili</h1>
+          <span id="loading-indicator" class="spinner-border spinner-border-lg text-primary ms-2" style="display: none"></span>
+        </div>
+  
+        <div id="products-list" class="row g-4"></div>
 
-      <div id="products-list" class="row g-4"></div>
+
+    </main>
+    <footer class="bg-dark text-light py-3">
+      <div class="container text-center">
+        <p class="mb-1">© 2025 TeleShop - Tutti i diritti riservati</p>
+
+      </div>
+    </footer>
+    
+
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
