--- a/backoffice.html
+++ b/backoffice.html
@@ -114,9 +114,9 @@
 
       <div id="products-list" class="row g-4"></div>
     </div>
-    <footer class="bg-dark text-light py-3">
+    <footer class="bg-dark text-light py-3 mt-5">
       <div class="container text-center">
-        <p class="mb-1">© 2025 TeleShop - Tutti i diritti riservati</p>
+        <p class="mb-1">© 2025 Your Shop - Tutti i diritti riservati</p>
       </div>
     </footer>
 
