--- a/detail.html
+++ b/detail.html
@@ -35,10 +35,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active text-white fw-bold" href="./home.html">Home</a>
+              <a class="nav-link text-white" href="./home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-white" href="./backoffice.html">Back Office</a>
+              <a class="nav-link text-white" href="./backoffice.html">Back Office</a>
             </li>
           </ul>
         </div>
@@ -47,15 +47,22 @@
 
     <div class="container mt-5">
       <div class="custom-header">
-        <h1 class="mb-2 font-custom">Dettagli del prodotto</h1>
+        <div class="container">
+          <ol class="breadcrumb mb-4">
+            <li class="breadcrumb-item"><a href="./home.html" class="text-decoration-none text-dark">Home</a></li>
+            <li class="breadcrumb-item"><a href="#" class="text-decoration-none">Scopri di più</a></li>
+          </ol>
+        </div>
+
+        <h1 class="mt-3 mb-2 font-custom">Dettagli del prodotto</h1>
         <p class="mb-5">Scopri tutti i dettagli del prodotto selezionato</p>
       </div>
 
       <div class="container mt-5" id="product-detail"></div>
     </div>
-    <footer class="bg-dark text-light py-3">
+    <footer class="bg-dark text-light py-3 mt-5">
       <div class="container text-center">
-        <p class="mb-1">© 2025 TeleShop - Tutti i diritti riservati</p>
+        <p class="mb-1">© 2025 Your Shop - Tutti i diritti riservati</p>
       </div>
     </footer>
 
