--- a/home.html
+++ b/home.html
@@ -56,20 +56,16 @@
           <h1 class="mb-4 font-custom">Prodotti Disponibili</h1>
           <span id="loading-indicator" class="spinner-border spinner-border-lg text-primary ms-2" style="display: none"></span>
         </div>
-  
+
         <div id="products-list" class="row g-4"></div>
-
-
+      </div>
     </main>
-    <footer class="bg-dark text-light py-3">
+    <footer class="bg-dark text-light py-3 mt-5">
       <div class="container text-center">
-        <p class="mb-1">© 2025 TeleShop - Tutti i diritti riservati</p>
-
+        <p class="mb-1">© 2025 Your Shop - Tutti i diritti riservati</p>
       </div>
     </footer>
-    
 
-    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
